# risk_assessment

./: CMakeLists.txt  package.xml
msg/: risk_location.msg  risk_locations.msg  risk_score.msg
src/: fuzzy_eva.py  fuzzytest.h  risk_assessment.cpp  risk_assessment_projection.cpp  test.cpp  testcv.cpp
